--- a/neu/webdev/public/assignment/user/profile.html
+++ b/neu/webdev/public/assignment/user/profile.html
@@ -47,7 +47,7 @@
 
         <a class="btn btn-primary btn-block"
            href="../website/website-list.html">Websites</a>
-        <a class="btn btn-danger  btn-block"
+        <a class="bottom-padding btn btn-danger  btn-block"
            href="login.html">Logout</a>
     </div>
 
