--- a/neu/webdev/public/assignment/user/profile.html
+++ b/neu/webdev/public/assignment/user/profile.html
@@ -47,8 +47,10 @@
 
         <a class="btn btn-primary btn-block"
            href="../website/website-list.html">Websites</a>
-        <a class="bottom-padding btn btn-danger  btn-block"
+
+        <a class="btn btn-danger  btn-block"
            href="login.html">Logout</a>
+        <div class="bottom-padding"></div>
     </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
