--- a/neu/webdev/public/assignment/user/profile.html
+++ b/neu/webdev/public/assignment/user/profile.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="profile.html">
                 Profile
             </a>
             <div class="navbar-text pull-right">
