--- a/neu/webdev/public/assignment/widget/widget-youtube.html
+++ b/neu/webdev/public/assignment/widget/widget-youtube.html
@@ -5,7 +5,7 @@
     <title>widget-edit</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../css/styles.css" rel="stylesheet"/>
     <link href="../bootstrap/bootstrap-4.0.0-alpha.6-dist/css/bootstrap.css"/>
 </head>
 <body>
