Default text adittion.

--- a/neu/webdev/public/assignment/website/website-list.html
+++ b/neu/webdev/public/assignment/website/website-list.html
@@ -42,7 +42,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="#">
+            <a href="../page/page-list.html">
                 Blogger
             </a>
             <a href="website-edit.html" class="pull-right">
@@ -51,7 +51,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="#">
+            <a href="../page/page-list.html">
                 Blogging App
             </a>
             <a href="website-edit.html" class="pull-right">
@@ -60,7 +60,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="#">
+            <a href="../page/page-list.html">
                 Script Testing App
             </a>
             <a href="website-edit.html" class="pull-right">
