--- a/neu/webdev/public/assignment/widget/widget-heading.html
+++ b/neu/webdev/public/assignment/widget/widget-heading.html
@@ -11,7 +11,7 @@
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="#" class="white_navbar navbar-link">
+            <a href="widget-list.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -35,11 +35,12 @@
     </div>
     <div class="form-group">
         <label for="widget-edit-text" class="form-control-label">Text</label>
-        <input id="widget-edit-text" class="form-control" type="text"></input>
+        <input id="widget-edit-text" class="form-control" type="text"
+               value="Congress Ends Spat, Agrees To Fund $1.1 Billion To Combat Zika">
     </div>
     <div class="form-group">
         <label for="widget-edit-size" class="form-control-label">Size</label>
-        <input id="widget-edit-size" class="form-control" type="text"></input>
+        <input id="widget-edit-size" class="form-control" type="text" value="3">
     </div>
     <a href="widget-list.html" class="btn btn-danger form-control">Delete</a>
 </div>
