--- a/neu/webdev/public/assignment/widget/widget-youtube.html
+++ b/neu/webdev/public/assignment/widget/widget-youtube.html
@@ -39,7 +39,7 @@
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
-        <input id="widget-image-url" class="form-control" type="text"></input>
+        <input id="widget-image-url" class="form-control" type="text" value="https://www.youtube.com/embed/SB35ikvGNgM">
     </div>
     <div class="form-group">
         <label for="widget-image-width" class="form-control-label">Width</label>
