--- a/neu/webdev/public/assignment/user/profile.html
+++ b/neu/webdev/public/assignment/user/profile.html
@@ -30,19 +30,19 @@
         <form>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Username">
+                <input type="text" class="form-control" id="username" placeholder="Username" value="raghu_cse">
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
+                <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com" value="raghu@gmail.com">
             </div>
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Alice">
+                <input type="text" class="form-control" id="first-name" placeholder="Alice" value="Raghavendra">
             </div>
             <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input type="text" class="form-control" id="last-name" placeholder="Wonderland">
+                <input type="text" class="form-control" id="last-name" placeholder="Wonderland" value="Venkatesh">
             </div>
         </form>
 
