--- a/neu/webdev/public/assignment/widget/widget-image.html
+++ b/neu/webdev/public/assignment/widget/widget-image.html
@@ -11,7 +11,7 @@
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="#" class="white_navbar navbar-link">
+            <a href="widget-list.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -35,19 +35,20 @@
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
-        <input id="widget-image-text" class="form-control" type="text"></input>
+        <input id="widget-image-text" class="form-control" type="text">
     </div>
     <div class="form-group">
         <label for="widget-image-url" class="form-control-label">URL</label>
-        <input id="widget-image-url" class="form-control" type="text"></input>
+        <input id="widget-image-url" class="form-control" type="text"
+               value="http://media.npr.org/assets/img/2016/09/28/mosquitos_wide-76ba2518aba3ad2877dd9c2479b764f0eaf8ab0e-s1600-c85.jpg">
     </div>
     <div class="form-group">
         <label for="widget-image-width" class="form-control-label">Width</label>
-        <input id="widget-image-width" class="form-control" type="text"></input>
+        <input id="widget-image-width" class="form-control" type="text" value="100%">
     </div>
     <div class="form-group">
         <label for="widget-image-upload" class="form-control-label">Upload</label>
-        <input id="widget-image-upload" class="form-control-file" type="file"></input>
+        <input id="widget-image-upload" class="form-control-file" type="file">
     </div>
     <div class="form-group">
         <a href="widget-list.html" class=" btn btn-primary form-control">Upload Image</a>
