--- a/neu/webdev/public/assignment/widget/widget-choose.html
+++ b/neu/webdev/public/assignment/widget/widget-choose.html
@@ -22,37 +22,38 @@
         </a>
     </div>
 </nav>
+<div class="container-fluid bottom-padding">
+    <ul class="list-group">
+        <li class="list-group-item">
+            <a href="widget-heading.html">Header</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">Lable</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">HTML</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">Text Input</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">Link</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">Button</a>
+        </li>
+        <li class="list-group-item">
+            <a href="widget-image.html">Image</a>
+        </li>
+        <li class="list-group-item">
+            <a href="widget-youtube.html">You Tube</a>
+        </li>
+        <li class="list-group-item">
+            <a href="#">Repeater</a>
+        </li>
 
-<ul class="list-group">
-    <li class="list-group-item">
-        <a href="widget-heading.html">Header</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">Lable</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">HTML</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">Text Input</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">Link</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">Button</a>
-    </li>
-    <li class="list-group-item">
-        <a href="widget-image.html">Image</a>
-    </li>
-    <li class="list-group-item">
-        <a href="widget-youtube.html">You Tube</a>
-    </li>
-    <li class="list-group-item">
-        <a href="#">Repeater</a>
-    </li>
-
-</ul>
+    </ul>
+</div>
 
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
