--- a/neu/webdev/public/assignment/widget/widget-image.html
+++ b/neu/webdev/public/assignment/widget/widget-image.html
@@ -51,7 +51,7 @@
         <input id="widget-image-upload" class="form-control-file" type="file">
     </div>
     <div class="form-group">
-        <a href="widget-list.html" class=" btn btn-primary form-control">Upload Image</a>
+        <a href="#" class=" btn btn-primary form-control">Upload Image</a>
     </div>
     <div class="bottom-padding">
         <a href="widget-list.html" class=" btn btn-danger form-control">Delete</a>
