--- a/neu/webdev/public/assignment/widget/widget-list.html
+++ b/neu/webdev/public/assignment/widget/widget-list.html
@@ -32,7 +32,7 @@
 <div class="container-fluid">
     <div>
         <div class="jga-toolbar">
-            <a href="#">
+            <a href="widget-heading.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
