Widget-list heading reference added widget-heading bottom padding added

--- a/neu/webdev/public/assignment/widget/widget-heading.html
+++ b/neu/webdev/public/assignment/widget/widget-heading.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid bottom-padding">
     <div class="newNAme form-group">
         <label for="widget-edit-name" class="form-control-label">Name</label>
         <input id="widget-edit-name" class="form-control" type="text">
