--- a/neu/webdev/public/assignment/widget/widget-list.html
+++ b/neu/webdev/public/assignment/widget/widget-list.html
@@ -73,7 +73,7 @@
             The deal is part of a broader agreement to continue to fund the government after the fiscal year ends on Friday and the current budget expires.</p>
         <div>
             <div class="jga-toolbar">
-                <a>
+                <a href="widget-heading.html">
                     <span class="glyphicon glyphicon-cog"></span>
                 </a>
                 <span class="glyphicon glyphicon-align-justify"></span>
