--- a/neu/webdev/public/assignment/user/profile.html
+++ b/neu/webdev/public/assignment/user/profile.html
@@ -24,7 +24,7 @@
 </nav>
 
 
-    <div class="container">
+    <div class="container newNAme">
 
         <form>
             <div class="form-group">
