--- a/neu/webdev/public/assignment/website/website-edit.html
+++ b/neu/webdev/public/assignment/website/website-edit.html
@@ -22,7 +22,7 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="website-new.html" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -66,37 +66,37 @@
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="#">
+                <a href="../page/page-list.html">
                     Address Book App
                 </a>
-                <a href="#" class="pull-right">
+                <a href="website-edit.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="#">
+                <a href="../page/page-list.html">
                     Blogger
                 </a>
-                <a href="#" class="pull-right">
+                <a href="website-edit.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="#">
+                <a href="../page/page-list.html">
                     Blogging App
                 </a>
-                <a href="#" class="pull-right">
+                <a href="website-edit.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="#">
+                <a href="../page/page-list.html">
                     Script Testing App
                 </a>
-                <a href="#" class="pull-right">
+                <a href="website-edit.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
