--- a/neu/webdev/public/assignment/website/website-edit.html
+++ b/neu/webdev/public/assignment/website/website-edit.html
@@ -108,11 +108,11 @@
         <div class="col-sm-8 col-xs-12 wbdv-right-pane">
             <div class="newNAme form-group">
                 <label for="new-web-name" class="form-control-label">Website Name</label>
-                <input placeholder="Name" id="new-web-name" class="form-control" type="text" value="Blogger">
+                <input placeholder="Website Name" id="new-web-name" class="form-control" type="text" value="Blogger">
             </div>
             <div class="form-group">
                 <label for="new-web-description" class="form-control-label">Website Description</label>
-                <textarea placeholder="Description" id="new-web-description" class="form-control" rows="4" cols="100">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</textarea>
+                <textarea placeholder="Website Description" id="new-web-description" class="form-control" rows="4" cols="100">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</textarea>
             </div>
             <button class="btn-danger form-control">Delete</button>
         </div>
