--- a/neu/webdev/public/assignment/website/website-new.html
+++ b/neu/webdev/public/assignment/website/website-new.html
@@ -106,11 +106,11 @@
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
       <div id="newNAme" class="form-group">
         <label for="new-web-name" class="form-control-label">Name</label>
-        <input id="new-web-name" class="form-control" type="text">
+        <input id="new-web-name" class="form-control" type="text" placeholder="Name">
       </div>
         <div class="form-group">
             <label for="new-web-description" class="form-control-label">Description</label>
-            <textarea id="new-web-description" class="form-control" rows="4" cols="100"></textarea>
+            <textarea id="new-web-description" class="form-control" rows="4" cols="100" placeholder="Description"></textarea>
         </div>
 
     </div>
