--- a/neu/webdev/public/assignment/website/website-new.html
+++ b/neu/webdev/public/assignment/website/website-new.html
@@ -121,7 +121,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="#" class="navbar-link">
+            <a href="../user/profile.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
