--- a/neu/webdev/public/assignment/widget/widget-choose.html
+++ b/neu/webdev/public/assignment/widget/widget-choose.html
@@ -58,7 +58,7 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="#" class="navbar-link">
+            <a href="../user/profile.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
