--- a/neu/webdev/public/assignment/widget/widget-youtube.html
+++ b/neu/webdev/public/assignment/widget/widget-youtube.html
@@ -54,7 +54,7 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="#" class="navbar-link">
+            <a href="../user/profile.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
