--- a/neu/webdev/public/assignment/index.html
+++ b/neu/webdev/public/assignment/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="WebAppMaker">
 <head>
+    <meta charset="UTF-8">
+    <title>Title</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet">
-    <script src="../js/angular.js"></script>
-    <script src="../js/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
 
     <script src="views/user/controllers/user.controller.client.js"></script>
-    <script src="views/user/controllers/page.controller.client.js"></script>
+    <script src="views/page/page.controller.client.js"></script>
     <script src="views/website/controllers/website.controller.client.js"></script>
-    <script src="views/website/controllers/widget.controller.client.js"></script>
+    <script src="views/widget/controllers/widget.controller.client.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
 </head>
 <body>
-
     <div ng-view></div>
-
 </body>
 </html>
