--- a/neu/webdev/public/assignment/index.html
+++ b/neu/webdev/public/assignment/index.html
@@ -11,7 +11,7 @@
     <script src="config.js"></script>
 
     <script src="views/user/controllers/user.controller.client.js"></script>
-    <script src="views/page/page.controller.client.js"></script>
+    <script src="views/page/controllers/page.controller.client.js"></script>
     <script src="views/website/controllers/website.controller.client.js"></script>
     <script src="views/widget/controllers/widget.controller.client.js"></script>
 
