--- a/neu/webdev/public/assignment/index.html
+++ b/neu/webdev/public/assignment/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment Home Page</title>
+
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
+    <script src="directives/wbdv-sortable.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
-
     <script src="views/user/controllers/user.controller.client.js"></script>
     <script src="views/page/controllers/page.controller.client.js"></script>
     <script src="views/website/controllers/website.controller.client.js"></script>
