--- a/neu/webdev/public/assignment/index.html
+++ b/neu/webdev/public/assignment/index.html
@@ -6,6 +6,7 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <link href="css/textAngular.css" rel="stylesheet"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
@@ -13,6 +14,13 @@
     <script src="directives/wbdv-sortable.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <!-- text angular-->
+    <script type="text/javascript" src="js/textAngular-rangy.min.js"></script>
+    <script type="text/javascript" src="js/textAngular.umd.js"></script>
+    <script type="text/javascript" src="js/textAngularSetup.js"></script>
+    <script type="text/javascript" src="js/textAngular-sanitize.min.js"></script>
+    <script type="text/javascript" src="js/textAngular.js"></script>
+
     <script src="views/user/controllers/user.controller.client.js"></script>
     <script src="views/page/controllers/page.controller.client.js"></script>
     <script src="views/website/controllers/website.controller.client.js"></script>
