--- a/neu/webdev/public/assignment/index.html
+++ b/neu/webdev/public/assignment/index.html
@@ -7,8 +7,9 @@
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/textAngular.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link href="css/styles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
@@ -17,10 +18,9 @@
     <script src="config.js"></script>
     <!-- text angular-->
     <script type="text/javascript" src="js/textAngular-rangy.min.js"></script>
-    <script type="text/javascript" src="js/textAngular.umd.js"></script>
-    <script type="text/javascript" src="js/textAngularSetup.js"></script>
     <script type="text/javascript" src="js/textAngular-sanitize.min.js"></script>
-    <script type="text/javascript" src="js/textAngular.js"></script>
+    <script type="text/javascript" src="js/textAngular.min.js"></script>
+
 
     <script src="views/user/controllers/user.controller.client.js"></script>
     <script src="views/page/controllers/page.controller.client.js"></script>
